web/k8config/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cloudcats-web
  labels:
    app: cloudcats
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: cloudcats
        tier: web
    spec:
      containers:
      - name: cloudcats-web
        image: gcr.io/cicd-ftw/ccweb:latest
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 8080
