web/k8config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudcats-web
  labels:
    app: cloudcats
    tier: web
spec:
  type: LoadBalancer
  loadBalancerIP: 104.154.132.78
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: cloudcats
    tier: web
