web/k8config/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudcats-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cloudcats-static-ip
spec:
  backend:
    serviceName: cloudcats-web
    servicePort: 80
